Fixed invisible text.

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -20,7 +20,7 @@ figcaption {
     color: white !important;
 }
 
-p {
+p #about {
     color: white;
     text-align: center !important;
 }
